# NovelVault

./: .gitignore  README.md  index.html  package-lock.json  package.json
documents/: 001_initial_schema.sql  002_add_favorites.sql  INDEX.md  favorites.rs  favorites.ts  fetch_storage_flow.md  react_components.md  requirements_v4.3.md  screen_design.md  site_profile_spec.md  test_integration.md  test_system.md  test_unit.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_favorites.sql  003_add_wayback_metadata.sql  004_add_profile_indexes.sql  005_use_trigram_fts.sql  006_unique_page_source_urls.sql
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: diagnostics.rs  favorites.rs  fetch.rs  files.rs  pages.rs  search.rs  site_profiles.rs  sites.rs  tests.rs  works.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src/api/: bulkFetch.ts  client.ts  diagnostics.ts  favorites.ts  fetch.ts  files.ts  pages.ts  search.ts  siteProfiles.ts  sites.ts  works.ts
src/components/layout/: AppLayout.tsx  AppModals.tsx  MainPane.tsx  Sidebar.tsx  TopBar.tsx
src/hooks/: useBulkFetch.ts  useDiagnostics.ts  useFavorites.ts  useFetchPage.ts  useFiles.ts  usePages.ts  useReaderSettings.ts  useSearch.ts  useSiteProfiles.ts  useSites.ts  useWorks.ts
src/types/: entities.ts
