[package]
name = "novel-vault"
version = "0.1.0"
description = "NovelVault desktop app"
edition = "2021"

[lib]
name = "novel_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chardetng = "0.1"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
